Sat Mar  3 16:30:39 2007  Akinori MUSHA  <knu@iDaemons.org>

	* env.h (SCOPE_CLONE): Introduce a new scope flag to prevent a
	  local_tbl region from getting freed many times; submitted by
	  Chikanaga Tomoyuki <chikanag AT nippon-control-system.co.jp> in
	  [ruby-dev:30460].

	* eval.c (proc_invoke): Ditto.

	* gc.c (obj_free): Ditto.

	* parse.y (top_local_setup_gen): Ditto.

Sat Mar  3 16:09:27 2007  Akinori MUSHA  <knu@iDaemons.org>

	* object.c (rb_obj_ivar_set): RDoc updated according to a
	  suggestion from Brian Candler <B.Candler AT pobox.com>.
	  [ruby-core:10469]

Sat Mar  3 15:41:33 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (stmt, arg): should not omit lhs of OP_ASGN1 even if
	  empty.  [ruby-dev:30452]

Thu Mar  1 04:08:30 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb (patchlevel): read from version.h.

Thu Mar  1 03:42:09 2007  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (get_digest_base_metadata): Allow inheriting
	  Digest::Base subclasses, which was unintentionally made
	  impossible while restructuring Digest classes.

Wed Feb 28 22:10:55 2007  Akinori MUSHA  <knu@iDaemons.org>

	* doc/NEWS-1.8.0: Rename NEWS to NEWS-1.8.0.  This is way too old
	  NEWS.

	* NEWS: Add NEWS, a document file to keep user visible feature
	  changes between releases.

	* configure.in (ac_cv_func_fcntl): fcntl support for MinGW.

	* missing/flock.c: workaround for MinGW.

	* ext/openssl/extconf.rb: no need to check unistd.h and sys/time.h.
	  they are already checked at configure.
	  reported by KOBAYASHI Yasuhiro [ruby-list:43225]

	* lib/mkmf.rb ($DEFLIBPATH): default library paths ($(topdir), etc)
	  should be the first elements of library paths list.
	  reported by KOBAYASHI Yasuhiro [ruby-list:43225]

	* test/{dbm,gdbm}/test_{dbm,gdbm}.rb: shouldn't use host_os. use
	  target_os instead. reported by KOBAYASHI Yasuhiro [ruby-list:43225]

	* mkconfig.rb (RbConfig): add CONFIG['PATCHLEVEL']

	* common.mk: new target dist
